Fix toolbar menu for addressbook covered under sidebox menu

--- a/phpgwapi/templates/idots/css/idots.css
+++ b/phpgwapi/templates/idots/css/idots.css
@@ -24,7 +24,7 @@
 
 .divSidebox,.textSidebox {
 	border: none;
-	overflow: auto;
+	overflow: visible;
 }
 
 .textSidebox {
